Corrige error en uso de romano_v1

--- a/match_case.ipynb
+++ b/match_case.ipynb
@@ -237,6 +237,9 @@
    "outputs": [],
    "source": [
     "def romano_v1(numero):\n",
+    "    \"\"\"NOTA: Este es un muy mal ejemplo del \n",
+    "    uso del match/case.\n",
+    "    \"\"\"\n",
     "    match numero:\n",
     "        case 1:\n",
     "            return 'I'\n",
@@ -2237,7 +2240,9 @@
     "        case 999:\n",
     "            return 'CMXCIX'\n",
     "        case 1000:\n",
-    "            return 'M'"
+    "            return 'M'\n",
+    "        case _:\n",
+    "            return 'sepa la bola'"
    ]
   },
   {
@@ -2245,9 +2250,20 @@
    "execution_count": 12,
    "id": "1d0ced07-e2e3-4292-aa71-f51b27e78025",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'CMXCIX'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "romano_v1(1999)"
+    "romano_v1(999)"
    ]
   },
   {
@@ -2282,7 +2298,7 @@
     {
      "data": {
       "text/plain": [
-       "'MCMXCIX'"
+       "'CMXCIX'"
       ]
      },
      "execution_count": 14,
@@ -2291,7 +2307,7 @@
     }
    ],
    "source": [
-    "romano_v2(1999)"
+    "romano_v2(999)"
    ]
   },
   {
