Actualiza la función aplana para ser más general

--- a/match_case.ipynb
+++ b/match_case.ipynb
@@ -34,7 +34,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "3180cc52-120e-482b-8be1-006511e11a16",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -55,7 +57,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "85fe0576-05bc-4159-a699-c0f8ebb30452",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def traduce_v2(palabra):\n",
@@ -76,7 +80,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "5939214c-8071-4d90-939c-8e9734ccd88a",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -97,7 +103,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "2e54c079-d83e-4cd6-bca4-a2ae25b15c78",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "DICC = {\n",
@@ -115,7 +123,9 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "757a3e11-70df-439f-acf5-91dda7fe581c",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -162,7 +172,9 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "ff35503d-36ce-4201-9d38-1957a4112368",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -233,7 +245,9 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "9fdeeec6-6502-4da9-9db7-f404ea170634",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def romano_v1(numero):\n",
@@ -2589,12 +2603,12 @@
    "source": [
     "def aplana(lista):\n",
     "    match lista:\n",
-    "        case []:\n",
-    "            return []\n",
     "        case [cabeza, *cola] if isinstance(cabeza, list):\n",
     "            return aplana(cabeza) + aplana(cola)\n",
     "        case [cabeza, *cola]:\n",
-    "            return [cabeza] + aplana(cola)"
+    "            return [cabeza] + aplana(cola)\n",
+    "        case _:\n",
+    "            return []"
    ]
   },
   {
